[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/MenuBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/runnables/menus/DebugMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/newFreakingLogo.png" type="Texture" id=3]
[ext_resource path="res://fonts/gameFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/nokiafc22.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 5 )

[node name="DebugMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="MenuBackground" parent="." instance=ExtResource( 1 )]

[node name="GunsListText" type="Label" parent="."]
margin_top = -1.0
margin_right = 490.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunsListSlot1" type="Label" parent="."]
margin_left = 64.0
margin_top = 53.0
margin_right = 160.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Slot1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunsListSlot2" type="Label" parent="."]
margin_left = 64.0
margin_top = 156.0
margin_right = 168.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "Slot2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gunWarning" type="Label" parent="."]
visible = false
margin_left = 6.0
margin_top = 617.0
margin_right = 1518.0
margin_bottom = 661.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.52549, 0.52549, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logoBumpin" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="logo" type="Sprite" parent="."]
position = Vector2( 1026.4, 134.162 )
scale = Vector2( 0.62488, 0.62488 )
texture = ExtResource( 3 )

[node name="logoText" type="Label" parent="logo"]
margin_left = -231.631
margin_top = 197.882
margin_right = 393.369
margin_bottom = 247.882
grow_horizontal = 2
grow_vertical = 2
rect_rotation = -6.2
rect_pivot_offset = Vector2( 312.5, 0 )
custom_fonts/font = SubResource( 3 )
text = "test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="languageCheckBox" type="CheckBox" parent="."]
margin_left = 6.0
margin_top = 658.0
margin_right = 319.0
margin_bottom = 685.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = SubResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunSelectSlot1" type="OptionButton" parent="."]
margin_left = 9.0
margin_top = 104.0
margin_right = 214.0
margin_bottom = 135.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunSelectSlot2" type="OptionButton" parent="."]
margin_left = 9.0
margin_top = 203.0
margin_right = 214.0
margin_bottom = 234.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelList" type="ItemList" parent="."]
margin_left = 10.0
margin_top = 321.0
margin_right = 211.0
margin_bottom = 626.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelListText" type="Label" parent="."]
margin_left = 9.0
margin_top = 269.0
margin_right = 401.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="GunSelectSlot1" to="." method="_on_GunSelectSlot1_item_selected"]
[connection signal="item_selected" from="GunSelectSlot2" to="." method="_on_GunSelectSlot2_item_selected"]
[connection signal="item_selected" from="LevelList" to="." method="_on_LevelList_item_selected"]
